chore: Remove the extra comma because there are rules about this sort of thing apparently, god knows what they are

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div>
         <h1>
             Simple, modern PHP <br>
-            framework, and libraries
+            framework and libraries
         </h1>
         <p>
             <strong>Follow</strong>
