deploy: Build for deployment

--- a/build_production/index.html
+++ b/build_production/index.html
@@ -68,7 +68,7 @@
         <p>
             <strong>Follow</strong>
             on <a href="http://twitter.com/smplphp" target="_blank">twitter</a>
-            for updates
+            for updates.
         </p>
     </div>
 </div>
