deploy: Pushing for deployment

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                 maintaining a high level of flexibility.
             </p>
             <div class="hero__text-controls">
-                <a href="#packages" class="button button--primary">Packages</a>
-                <a href="https://github.com/smplphp" target="_blank" class="button button--secondary">Github</a>
+                <a href="https://github.com/smplphp" class="button button--secondary">Github</a>
+                <a href="https://twitter.com" class="button button--primary">Twitter</a>
             </div>
         </div>
 
@@ -81,120 +81,19 @@
                 A work in progress
             </h2>
             <p>
-                SMPL is still in its early stages of development. As it progresses, so to will this site be updated
-                with information about new components, utilities and anything else worthy of note.
+                SMPL is still in its early stages of development, arguably, it's a proof of concept at the moment. As it
+                progresses, so to will this site be updated with information about new components, utilities and
+                anything else worthy of note.
             </p>
             <p>
-                Semi-regular updates are posted to <a href="https://twitter.com/smplphp" target="_blank">twitter</a>,
-                and soon, the <a href="https://www.getrevue.co/profile/smplphp" target="_blank">revue newsletter</a>.
+                If you're interested in finding out more, you can check out the <a href="https://twitter.com/smplphp" target="_blank">SMPL twitter</a>,
+                or my own (<a href="https://twitter.com/ollieread" target="_blank">@ollieread</a>).
             </p>
         </div>
     </div>
 </section>
 
-<section class="section section--alt" id="packages">
-    <div class="container container--column">
-        <div class="packages">
-            <h2 class="section__heading">
-                <i class="fa-duotone fa-layer-group text--primary section__heading-icon"></i>
-                Packages
-            </h2>
 
-            <a href="https://github.com/smplphp/inspector" class="package" target="_blank">
-                <div class="package__name">Inspector</div>
-                <div class="package__description">
-                    <p>
-                        A simple, standalone, modern PHP class inspector and mapper library, wrapping PHPs native
-                        reflection in a fluent interface.
-                    </p>
-                    <div class="tags">
-                        <span class="tag bg--red">v1.1.0-alpha</span>
-                        <span class="tag bg--purple">Reflection</span>
-                        <span class="tag bg--purple">Utility</span>
-                    </div>
-                </div>
-            </a>
-
-            <a href="https://github.com/smplphp/container" class="package" target="_blank">
-                <div class="package__name">Container</div>
-                <div class="package__description">
-                    <p>
-                        A simple, modern PHP dependency injection container.
-                    </p>
-                    <div class="tags">
-                        <span class="tag bg--red">dev-develop</span>
-                        <span class="tag bg--purple">Dependency Injection</span>
-                        <span class="tag bg--purple">Reflection</span>
-                        <span class="tag bg--green">Inspector</span>
-                    </div>
-                </div>
-            </a>
-
-            <a href="https://github.com/smplphp/meta-container" class="package" target="_blank">
-                <div class="package__name">Container Meta</div>
-                <div class="package__description">
-                    <p>
-                        The meta package for the container, providing its contracts, exceptions and metadata, without
-                        requiring an implementation.
-                    </p>
-                    <div class="tags">
-                        <span class="tag bg--red">dev-develop</span>
-                        <span class="tag bg--purple">Dependency Injection</span>
-                        <span class="tag bg--purple">Meta</span>
-                    </div>
-                </div>
-            </a>
-
-            <a href="https://github.com/smplphp/event-bus" class="package" target="_blank">
-                <div class="package__name">Event Bus</div>
-                <div class="package__description">
-                    <p>
-                        A simple modern event bus component, following the listener/subscriber patterns.
-                    </p>
-                    <div class="tags">
-                        <span class="tag bg--red">dev-develop</span>
-                        <span class="tag bg--purple">Event Bus</span>
-                        <span class="tag bg--purple">Listener</span>
-                        <span class="tag bg--purple">Subscriber</span>
-                        <span class="tag bg--green">Inspector</span>
-                        <span class="tag bg--green">Container Meta</span>
-                    </div>
-                </div>
-            </a>
-
-            <a href="https://github.com/smplphp/meta-event-bus" class="package" target="_blank">
-                <div class="package__name">Event Bus Meta</div>
-                <div class="package__description">
-                    <p>
-                        The meta package for the event-bus, providing its contracts, exceptions and metadata, without
-                        requiring an implementation.
-                    </p>
-                    <div class="tags">
-                        <span class="tag bg--red">dev-develop</span>
-                        <span class="tag bg--purple">Event Bus</span>
-                        <span class="tag bg--purple">Meta</span>
-                    </div>
-                </div>
-            </a>
-
-            <a href="https://github.com/smplphp/collections" class="package" target="_blank">
-                <div class="package__name">Collections</div>
-                <div class="package__description">
-                    <p>
-                        A utility package providing many types of collections, from Sequences, to Maps.
-                    </p>
-                    <div class="tags">
-                        <span class="tag bg--red">dev-develop</span>
-                        <span class="tag bg--purple">Collections</span>
-                        <span class="tag bg--purple">Arrays</span>
-                        <span class="tag bg--purple">Utility</span>
-                    </div>
-                </div>
-            </a>
-
-        </div>
-    </div>
-</section>
 
 
 
